Import of TIMBRODY/Logfile-EPrints-1.14 from CPAN.
gitpan-cpan-distribution: Logfile-EPrints
gitpan-cpan-version:      1.14
gitpan-cpan-path:         TIMBRODY/Logfile-EPrints-1.14.tar.gz
gitpan-cpan-author:       TIMBRODY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Logfile::EPrints.
 
+1.14
+    - Completely removed Logfile::EPrints::arXiv to fix test errors
+
 1.13
 	- Added Logfile::EPrints::Filter::Debug class
 	- Added alpha 'session' support: see Logfile::EPrints::Filter::Session
